fixed product spacing

--- a/public/css/products.css
+++ b/public/css/products.css
@@ -137,10 +137,11 @@ nav li a:hover {
 
 .image-gallery {
     margin-top: 3%;
+    width: 100%;
 }
 
 .item {
-    margin-right: 2.4%;
+    margin-left: 3%;
     margin-bottom: 10%;
     border: 1px solid #ccc;
     width: 235px;
@@ -148,8 +149,8 @@ nav li a:hover {
     text-align: center;
 }
 
-.item:last-child {
-    margin-right: 0;
+.item:first-child {
+    margin-left: 0;
 }
 
 .item:hover {
